--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
 .container{
     width: 100vw;
     height:100vh;
-    background-color: hsl(223, 27%, 78%);
+    background-color: #d5e1ef;
     align-items: center;
     justify-content: center;
     display: flex;
